# ICHIS_ATLAS_APP

./: MANIFEST.in  pyproject.toml  setup.cfg  setup.py
docs/: Criacao-do-App-prompt-gf-atlas-v1.md  Criacao-skill-v1.md  Criacao_da_Pag_Principal_prompt_gf_atlas_webpage.md  GF_DATA_POPULATION_RULES.md  GF_Skill_Documentacao_Inteligente_v1.0.0.html  manual_gf_atlas_app.html
ichis_atlas_app/: hooks.py  install.py  modules.txt
ichis_atlas_app/api/: natural_studio.py
ichis_atlas_app/ichis_atlas_app/doctype/gf_access_group/: gf_access_group.js  gf_access_group.json  gf_access_group.py
ichis_atlas_app/ichis_atlas_app/doctype/gf_access_group_user/: gf_access_group_user.json  gf_access_group_user.py
ichis_atlas_app/ichis_atlas_app/doctype/gf_content_group/: gf_content_group.js  gf_content_group.json  gf_content_group.py
ichis_atlas_app/ichis_atlas_app/doctype/gf_content_registry/: gf_content_registry.js  gf_content_registry.json  gf_content_registry.py
ichis_atlas_app/ichis_atlas_app/doctype/gf_integration_settings/: gf_integration_settings.json  gf_integration_settings.py
ichis_atlas_app/ichis_atlas_app/doctype/gf_skill/: gf_skill.js  gf_skill.json  gf_skill.py
ichis_atlas_app/www/: gf_atlas.html  gf_atlas.py  gf_content_registry.html  gf_integration_settings.html  gf_skill.html  gf_skill.py
prompts/: gf_integration_settings.md
